src/renderer/views/MainRouteRenderer.scss
/**
 * SPDX-License-Identifier: Apache-2.0
 * SPDX-FileCopyrightText: © 2024 Tenstorrent Inc.
 */

@import "../scss/variables";

.node {
    &:hover {
        fill: $tt-light-gray;
    }
}

.node-type-d {
    fill: $c-dram;
    background-color: $c-dram;
}

.node-type-c {
    fill: $c-core;
    background-color: $c-core;
}

.node-type-hc {
    fill: $hc-core;
    background-color: $hc-core;

    &.node-type-label::before {
        $line-thickness: 1px;

        content: '';
        position: absolute;
        inset: 0;
        background-image: linear-gradient(
            -45deg,
            transparent calc(50% - $line-thickness),
            $tt-very-dark-gray calc(50% - $line-thickness),
            $tt-very-dark-gray calc(50% + $line-thickness),
            transparent calc(50% + $line-thickness)
        );
    }
}

.node-type-r {
    fill: $c-router;
    background-color: $c-router;
}

.node-type-e {
    fill: $c-eth;
    background-color: $c-eth;
}

.node-type-p {
    fill: $c-pcix;
    background-color: $c-pcix;
}

.node-type {
    border-bottom: 2px solid transparent;

    &.detailed-view {
        border-bottom: 2px solid $bright-highlight;
    }
}

.main-route {
    // This is a CSS variable because the value is set dynamically in react.
    --js-bottom-dock-height: $initial-dock-height;

    display: grid;
    grid-template-columns: $sidebar-width $controls-panel-width min-content 1fr;
    grid-template-rows: $top-bar-height auto;
    grid-template-areas:
        "top-bar top-bar top-bar top-bar"
        "sidebar controls main properties";
    gap: 10px;
    padding: 10px;
    height: 100vh;
    width: 100vw;

    .header {
        grid-area: top-bar;
        margin: 0;
    }

    .sidebar { grid-area: sidebar; }
    .grid-sidebar {
        grid-area: controls;
        position: relative;
    }
    .main-content {
        max-width: 50vw;
        width: fit-content;
        grid-area: main;
        overflow: auto;
    }
    .properties-panel {
        min-width: $properties-panel-width;
        grid-area: properties;
        position: relative;
    }

    .bottom-dock {
        grid-area: bottom-dock;
        display: none;
        height: $initial-dock-height;
        align-self: end;
    }

    .main-route-loading-overlay {
        grid-area: main;
        background: $tt-background;
        display: grid;
        place-items: center;
        z-index: calc(infinity * 1);
        opacity: 0;
        pointer-events: none;
        transition: all 0.25s ease-in-out;
        font-size: larger;
        width: 50vw;
    }

    .panel-overlay {
        position: absolute;
        inset: 0;
        background: color-mix(in srgb, $tt-background 80%, transparent);
        display: none;
    }

    &.loading-data {
        .main-route-loading-overlay {
            opacity: 1;
            pointer-events: all;
        }

        .main-content { display: none; }

        .panel-overlay { display: block; }
    }

    &.detailed-view-open {
        grid-template-rows: $top-bar-height auto var(--js-bottom-dock-height);
        grid-template-areas:
            "top-bar top-bar top-bar top-bar"
            "sidebar controls main properties"
            "bottom-dock bottom-dock bottom-dock properties"
        ;
    }

    &.dock-open {
        grid-template-rows: $top-bar-height auto var(--js-bottom-dock-height);
        grid-template-areas:
            "top-bar top-bar top-bar top-bar"
            "sidebar controls main properties"
            "bottom-dock bottom-dock bottom-dock bottom-dock"
        ;

        .bottom-dock { display: block; }
    }

    &.invalid-data {
        .main-content {
            text-align: center;
            justify-self: center;
            align-self: start;
            margin-block-start: 10vh;

            p {
                margin-block: 20px;
                font-size: x-large;
            }

            svg {
                color: $tt-yellow;
            }
        }

        .panel-overlay { display: block; }
    }

    @media (max-width: 1280px) {
        // Make the properties bar have a fixed width on smaller sizes without creating horizontal scrollbars
        grid-template-columns: $sidebar-width $controls-panel-width auto calc($properties-panel-width + 30px);

        .main-content { width: auto; }
    }
}

.outer-wrapper {
    display: flex;
    flex-direction: column;
    height: 100vh;
    width: 100vw;
    overflow: hidden;


    .dock {
        margin: 0 20px;
        width: calc(100% - 40px);
        height: 0px;
        overflow: hidden;
    }

    $dock-height: 420px;

    &.dock-open {
        .dock {
            height: $dock-height - 20px;
            bottom: 0;
        }

        .main-wrapper {
            height: calc(100vh - $dock-height);
            overflow: hidden;
        }

        .grid-container {
            height: calc(100vh - 10px - $dock-height);
        }

        .properties-panel {
            margin-block-end: 10px;
        }

        .properties-panel-nodes {
            max-height: calc(100vh - 70px - $dock-height);
        }

        .list-wrap {
            max-height: calc(100vh - 150px - $dock-height);
        }

        .properties-panel__content .list-wrap {
            max-height: calc(100vh - 120px - $dock-height);
        }

        .inner-sidebar {
            max-height: calc(100vh - 20px - $dock-height);
        }
    }

    &.detailed-view-open {
        .inner-sidebar {
            max-height: calc(100vh - 640px);
        }

        .grid-container {
            height: calc(100vh - 640px);
        }
    }
}

.main-wrapper {
    margin-top: 20px;
    display: flex;
    flex-direction: row;
    gap: 20px;
}

.main-container {
    display: flex;
    gap: 50px;
    width: calc(100% - 100px);
}

.sidebar {
    display: flex;
    flex-direction: column;
    gap: 10px;
}
/* ... */

